# pe-unde-bei-apa

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  README.md  genaudio.sh  install.sh  migration_apply.sh  migration_new.sh  migration_reset_local_to_prod.sh  mysql.sh  original.txt  pyproject.toml  pytest.ini  search_mysql.sh  yoyo.ini
data/01_original_text/: 01_pdf-6-pagini.txt  02_pdf-66-de-pagini-de-injuraturi-grele_compress.txt  03_injuraturi-pentru-ocazii_compress.txt  04_roman-injuraturi-by-891_compress.txt
data/02_segments/: 0000.txt  0001.txt  0002.txt  0003.txt  0004.txt  0005.txt  0006.txt  0007.txt  0008.txt  0009.txt  0010.txt  0011.txt  0012.txt  0013.txt  0014.txt  0015.txt  0016.txt  0017.txt  0018.txt  0019.txt  0020.txt  0021.txt  0022.txt  0023.txt  0024.txt  0025.txt  0026.txt  0027.txt  0028.txt  0029.txt  0030.txt  0031.txt  0032.txt  0033.txt  0034.txt  0035.txt  0036.txt  0037.txt  0038.txt  0039.txt  (+21 more)
data/03_corrected_json/: 0000.json  0001.json  0002.json  0003.json  0004.json  0005.json  0006.json  0007.json  0008.json  0009.json  0010.json  0011.json  0012.json  0013.json  0014.json  0015.json  0016.json  0017.json  0018.json  0019.json  0020.json  0021.json  0022.json  0023.json  0024.json  0025.json  0026.json  0027.json  0028.json  0029.json  0030.json  0031.json  0032.json  0033.json  0034.json  0035.json  (+25 more)
docker/: .gitignore  docker-compose.yaml  manticore.conf
docs/: ronet.md
extragere/: injuraturi_urls.txt  orchestrator.py  pula.py  song_scraper.py
prompt-ideas/: generate-tags.md
scratch/: debug_spacy.py  markdown-rendered.html  scrape_1.html  scrape_2.html
scribens/: check.js  checksum.js  example.txt
scripts/: s00_print_bad_chars.py  s01_extract_text_from_pdf.py  s02_chunks.py  s03_api_scribens.py  s04_apply_fix.py  s05_dedup.py  s06_spacy.py  s07_index_manticore_sentence.py  s08_trump_audio.py  s09_embedding_gemma.py  s10_word_freq.py  s11_compute_freq_histogram.py  s12_fetch_entry_to_scrape.py  s13_insert_scrape_requests.py  s14_scrape_dex.py  s15_backfill_all_dex_entries.py  s16_parse_dex_html.py  text_utils.py
website/: add_sentence.py  database.py  db_select.py  dictionary_source_blacklist.py  genaudio.py  index_manticore.py  migrate.py
(+102 files in other folders)
