[project]
name = "pe-unde-bei-apa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "gunicorn>=25.3.0",
    "pip>=26.0.1",
    "pre-commit>=4.5.1",
    "pymysql[rsa]>=1.1.2",
    "pytest>=9.0.3",
    "requests>=2.33.0",
    "ro-core-news-sm",
    "ro-core-news-lg",
    "rowordnet>=1.1.0",
    "setuptools==69.5.1",
    "spacy>=3.8.14",
    "yoyo-migrations>=9.0.0",
    "matplotlib>=3.10.8",
]

[dependency-groups]
dev = [
    "ruff>=0.15.9",
]

[tool.uv.sources]
ro-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/ro_core_news_sm-3.8.0/ro_core_news_sm-3.8.0-py3-none-any.whl" }
ro-core-news-lg = { url = "https://github.com/explosion/spacy-models/releases/download/ro_core_news_lg-3.8.0/ro_core_news_lg-3.8.0-py3-none-any.whl" }
